pizza and pasta pages added with images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html" target="_blank" rel="noreferrer noopener">Lasagna</a>
+    <a href="./recipes/pizza.html" target="_blank" rel="noreferrer noopener">Pizza</a>
+    <a href="./recipes/pasta.html" target="_blank" rel="noreferrer noopener">Pasta</a>
 </body>
 </html>
