--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html" target="_blank" rel="noreferrer noopener">Lasagna</a>
-    <a href="./recipes/pizza.html" target="_blank" rel="noreferrer noopener">Pizza</a>
-    <a href="./recipes/pasta.html" target="_blank" rel="noreferrer noopener">Pasta</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html" target="_blank" rel="noreferrer noopener">Lasagna</a></li>
+        <li><a href="./recipes/pizza.html" target="_blank" rel="noreferrer noopener">Pizza</a></li>
+        <li><a href="./recipes/pasta.html" target="_blank" rel="noreferrer noopener">Pasta</a></li>
+    </ul>
+    
 </body>
 </html>
