--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Pasta</title>
 </head>
 <body>
-    <h1>Pasta</h1>
+    <a href="../index.html">Back to Home Page</a>
+    <h1 class="header">Pasta</h1>
     <img src="../images/pasta.jpeg">
     <h2>How to make Pasta</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, totam obcaecati minus veniam nihil eveniet incidunt quam, in animi quibusdam recusandae? Magni deserunt accusantium fugiat pariatur labore voluptate dignissimos aperiam!</p>
