--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html" target="_blank" rel="noreferrer noopener">Lasagna</a></li>
-        <li><a href="./recipes/pizza.html" target="_blank" rel="noreferrer noopener">Pizza</a></li>
-        <li><a href="./recipes/pasta.html" target="_blank" rel="noreferrer noopener">Pasta</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/pasta.html">Pasta</a></li>
     </ul>
     
 </body>
