font size changed for h1 and h2 elements

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="header">Odin Recipes</h1>
+    <ul class="links">
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/pizza.html">Pizza</a></li>
         <li><a href="./recipes/pasta.html">Pasta</a></li>
